--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,13 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#FF666666</color>
+    <color name="yellow">#FFEB3B</color>
+
+    <color name="skin">#ffcc99</color>
+    <color name="red">#ff0000</color>
+    <color name="green">#00ff00</color>
+    <color name="blue">#0000ff</color>
+    <color name="kitkat">#35a779</color>
+    <color name="random">#A349B1</color>
+
 </resources>
