--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:backgroundTint="@color/skin"
+            android:onClick="paintClicked"
             android:src="@drawable/pallet_normal"
             android:tag="@color/skin" />
 
@@ -41,6 +42,7 @@
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:backgroundTint="@color/black"
+            android:onClick="paintClicked"
             android:src="@drawable/pallet_normal"
             android:tag="@color/black" />
 
@@ -49,6 +51,7 @@
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:backgroundTint="@color/red"
+            android:onClick="paintClicked"
             android:src="@drawable/pallet_normal"
             android:tag="@color/red" />
 
@@ -57,6 +60,7 @@
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:backgroundTint="@color/green"
+            android:onClick="paintClicked"
             android:src="@drawable/pallet_normal"
             android:tag="@color/green" />
 
@@ -65,6 +69,7 @@
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:backgroundTint="@color/blue"
+            android:onClick="paintClicked"
             android:src="@drawable/pallet_normal"
             android:tag="@color/blue" />
 
@@ -73,6 +78,7 @@
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:backgroundTint="@color/yellow"
+            android:onClick="paintClicked"
             android:src="@drawable/pallet_normal"
             android:tag="@color/yellow" />
 
@@ -81,6 +87,7 @@
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:backgroundTint="@color/kitkat"
+            android:onClick="paintClicked"
             android:src="@drawable/pallet_normal"
             android:tag="@color/kitkat" />
 
@@ -89,6 +96,7 @@
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:backgroundTint="@color/random"
+            android:onClick="paintClicked"
             android:src="@drawable/pallet_normal"
             android:tag="@color/random" />
 
